[project]
name = "ir-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.12",
    "gensim>=4.3.2",
    "ir-datasets>=0.5.10",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "spacy>=3.8.5",
    "tabulate>=0.9.0",
]
